try-docker/5-docker-deploy-management/docker-k8s/clusterIP.yaml
apiVersion: v1
kind: Service
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP


spec:
  type: ClusterIP
  clusterIp: 123.123.123.123
